--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,11 @@
 
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
+
+* {
+    outline: none !important;
+}
+
+.pointer {
+    cursor: pointer !important;
+}
