--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10002,3 +10002,10 @@ h3 {
     border-color: #dee2e6;
   }
 }
+* {
+  outline: none !important;
+}
+
+.pointer {
+  cursor: pointer !important;
+}
